objects/Project_Budget__c.object
<CustomObject>
    <description>its a custom object</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Implementation_Cost__c</fullName>
        <label>Implementation Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <label>Project Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Project_Cost__c  +  Implementation_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twitza_location__c</fullName>
        <label>Twitza location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ssn__c</fullName>
        <label>ssn</label>
        <length>11</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Implementation_Cost__c</columns>
        <columns>Contact__c</columns>
        <columns>Twitza_location__Latitude__s</columns>
        <columns>Twitza_location__Longitude__s</columns>
        <columns>ssn__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>